--- a/src/App.css
+++ b/src/App.css
@@ -13,14 +13,11 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.info-section {
+  top: 41%;
+  left: 20%;
+  position: fixed;
+  font-size: calc(40px + 2vmin);
   color: white;
 }
 
@@ -28,11 +25,72 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.info-container {
+  text-align: left;
+  position: fixed;
+  left: 25%;
+}
+
+.name {
+  color: #1B75BC;
+  font-weight: bold;
+}
+
+.panel {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  width: 10%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  z-index: 2;
+}
+
+.right {
+  right: 0;
+}
+
+.footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 3rem;
+  right: 0;
+}
+
+.icons {
+  height: 30px;
+  cursor: pointer
+}
+
+.icon-container {
+  margin: 0 10px;
+}
+
+@media (max-width: 1000px) {
+  .App-header {
+    font-size: calc(30px + 2vmin);
   }
-  to {
-    transform: rotate(360deg);
+  .panel{
+    display: none;
+  }
+}
+
+@media (max-width: 700px) {
+  .info-container {
+    left: 10%;
+    top: 10%;
   }
 }
