--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -63,7 +63,7 @@
 .switch__label {
   position: relative;
   display: inline-block;
-  width: 87px;
+  width: 42px;
   height: 39px;
   background-color: #2B2B2B;
   border: 3px solid #5B5B5B;
@@ -76,7 +76,7 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%) translateX(-72%);
+  transform: translate(-50%, -50%);
   display: block;
   width: 30px;
   height: 30px;
@@ -93,23 +93,23 @@
   border-radius: 9999px;
 }
 
-.switch__indicator::before {
-  top: 7px;
-  left: 7px;
-  width: 5px;
-  height: 5px;
-  background-color: #FFFFFF;
-  opacity: 0.6;
-}
-
-.switch__indicator::after {
-  bottom: 8px;
-  right: 6px;
-  width: 9px;
-  height: 9px;
-  background-color: #FFFFFF;
-  opacity: 0.8;
-}
+//.switch__indicator::before {
+//  top: 7px;
+//  left: 7px;
+//  width: 5px;
+//  height: 5px;
+//  background-color: #FFFFFF;
+//  opacity: 0.6;
+//}
+//
+//.switch__indicator::after {
+//  bottom: 8px;
+//  right: 6px;
+//  width: 9px;
+//  height: 9px;
+//  background-color: #FFFFFF;
+//  opacity: 0.8;
+//}
 
 .switch__decoration {
   position: absolute;
@@ -127,22 +127,22 @@
   position: absolute;
   display: block;
   content: '';
-  width: 5px;
-  height: 5px;
+  width: 4px;
+  height: 4px;
   background-color: #FFFFFF;
   border-radius: 9999px;
 }
 
 .switch__decoration::before {
-  top: -20px;
-  left: 10px;
+  top: -12px;
+  left: -9px;
   opacity: 1;
   animation: twinkle 0.6s infinite;
 }
 
 .switch__decoration::after {
-  top: -7px;
-  left: 30px;
+  top: -16px;
+  left: 6px;
   animation: twinkle 0.6s infinite -0.2s;
 }
 
@@ -164,7 +164,7 @@
 .switch__input:checked + .switch__label .switch__indicator {
   background-color: #ECD21F;
   box-shadow: none;
-  transform: translate(-50%, -50%) translateX(72%);
+  transform: translate(-50%, -50%);
 }
 
 .switch__input:checked + .switch__label .switch__indicator::before, .switch__input:checked + .switch__label .switch__indicator::after {
@@ -172,16 +172,16 @@
 }
 
 .switch__input:checked + .switch__label .switch__decoration {
-  top: 50%;
+  top: 57%;
   transform: translate(0%, -50%);
   animation: cloud 8s linear infinite;
-  width: 20px;
-  height: 20px;
+  width: 11px;
+  height: 9px;
 }
 
 .switch__input:checked + .switch__label .switch__decoration::before {
-  width: 10px;
-  height: 10px;
+  width: 9px;
+  height: 6px;
   top: auto;
   bottom: 0;
   left: -8px;
@@ -189,11 +189,11 @@
 }
 
 .switch__input:checked + .switch__label .switch__decoration::after {
-  width: 15px;
-  height: 15px;
+  width: 10px;
+  height: 11px;
   top: auto;
   bottom: 0;
-  left: 16px;
+  left: 10px;
   animation: none;
 }
 
