* implement icons to change dark/light mode * Detect browser language and dar/light mode to use * Implement media querys * React router

--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -12,6 +12,7 @@
   .sections-container {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 
     .section-title {
       margin-right: 70px;
@@ -25,9 +26,11 @@
     }
   }
 
-  .language-container {
-    right: 0;
+  .settings-container {
+    right: 2%;
     position: fixed;
+    display: flex;
+    align-items: center;
 
     .selected-language {
       text-decoration: underline;
@@ -39,111 +42,102 @@
       //color: white;
       cursor: pointer;
     }
-  }
 
+    .dark-mode-switch {
+      border: 2px solid #6b611f;
+      border-radius: 20%;
+    }
+  }
 }
 
 .switch {
   display: inline-block;
   position: relative;
 
-}
+  .switch__input {
+    clip: rect(1px, 1px, 1px, 1px);
+    clip-path: inset(50%);
+    height: 1px;
+    width: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+  }
 
-.switch__input {
-  clip: rect(1px, 1px, 1px, 1px);
-  clip-path: inset(50%);
-  height: 1px;
-  width: 1px;
-  margin: -1px;
-  overflow: hidden;
-  padding: 0;
-  position: absolute;
-}
+  .switch__label {
+    position: relative;
+    display: inline-block;
+    width: 42px;
+    height: 39px;
+    background-color: #2B2B2B;
+    border: 3px solid #5B5B5B;
+    border-radius: 9999px;
+    cursor: pointer;
+    transition: all 0.4s cubic-bezier(0.46, 0.03, 0.52, 0.96);
 
-.switch__label {
-  position: relative;
-  display: inline-block;
-  width: 42px;
-  height: 39px;
-  background-color: #2B2B2B;
-  border: 3px solid #5B5B5B;
-  border-radius: 9999px;
-  cursor: pointer;
-  transition: all 0.4s cubic-bezier(0.46, 0.03, 0.52, 0.96);
-}
+    .switch__indicator {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      display: block;
+      width: 30px;
+      height: 30px;
+      background-color: #7B7B7B;
+      border-radius: 9999px;
+      box-shadow: 10px 0px 0 0 rgba(0, 0, 0, 0.2) inset;
 
-.switch__indicator {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  display: block;
-  width: 30px;
-  height: 30px;
-  background-color: #7B7B7B;
-  border-radius: 9999px;
-  box-shadow: 10px 0px 0 0 rgba(0, 0, 0, 0.2) inset;
-}
+      &::before, &::after {
+        position: absolute;
+        content: '';
+        display: block;
+        background-color: #FFFFFF;
+        border-radius: 9999px;
+      }
+    }
 
-.switch__indicator::before, .switch__indicator::after {
-  position: absolute;
-  content: '';
-  display: block;
-  background-color: #FFFFFF;
-  border-radius: 9999px;
-}
+    .switch__indicator, .switch__indicator::before, .switch__indicator::after {
+      transition: all 0.4s cubic-bezier(0.46, 0.03, 0.52, 0.96);
+    }
 
-//.switch__indicator::before {
-//  top: 7px;
-//  left: 7px;
-//  width: 5px;
-//  height: 5px;
-//  background-color: #FFFFFF;
-//  opacity: 0.6;
-//}
-//
-//.switch__indicator::after {
-//  bottom: 8px;
-//  right: 6px;
-//  width: 9px;
-//  height: 9px;
-//  background-color: #FFFFFF;
-//  opacity: 0.8;
-//}
+    .switch__decoration {
+      position: absolute;
+      top: 65%;
+      left: 50%;
+      display: block;
+      width: 5px;
+      height: 5px;
+      background-color: #FFFFFF;
+      border-radius: 9999px;
+      animation: twinkle 0.8s infinite -0.6s;
 
-.switch__decoration {
-  position: absolute;
-  top: 65%;
-  left: 50%;
-  display: block;
-  width: 5px;
-  height: 5px;
-  background-color: #FFFFFF;
-  border-radius: 9999px;
-  animation: twinkle 0.8s infinite -0.6s;
-}
+      &::before, &::after {
+        position: absolute;
+        display: block;
+        content: '';
+        width: 4px;
+        height: 4px;
+        background-color: #FFFFFF;
+        border-radius: 9999px;
+      }
 
-.switch__decoration::before, .switch__decoration::after {
-  position: absolute;
-  display: block;
-  content: '';
-  width: 4px;
-  height: 4px;
-  background-color: #FFFFFF;
-  border-radius: 9999px;
-}
+      &::before {
+        top: -12px;
+        left: -9px;
+        opacity: 1;
+        animation: twinkle 0.6s infinite;
+      }
 
-.switch__decoration::before {
-  top: -12px;
-  left: -9px;
-  opacity: 1;
-  animation: twinkle 0.6s infinite;
-}
+      &::after {
+        top: -16px;
+        left: 6px;
+        animation: twinkle 0.6s infinite -0.2s;
+      }
+    }
 
-.switch__decoration::after {
-  top: -16px;
-  left: 6px;
-  animation: twinkle 0.6s infinite -0.2s;
+
+  }
 }
 
 @keyframes twinkle {
@@ -152,57 +146,55 @@
   }
 }
 
-.switch__indicator, .switch__indicator::before, .switch__indicator::after {
-  transition: all 0.4s cubic-bezier(0.46, 0.03, 0.52, 0.96);
-}
+.darkMode {
+  .switch__label {
+    background-color: #8FB5F5;
+    border-color: #347CF8;
 
-.switch__input:checked + .switch__label {
-  background-color: #8FB5F5;
-  border-color: #347CF8;
-}
+    .switch__indicator {
+      background-color: #ECD21F;
+      box-shadow: none;
+      transform: translate(-50%, -50%);
 
-.switch__input:checked + .switch__label .switch__indicator {
-  background-color: #ECD21F;
-  box-shadow: none;
-  transform: translate(-50%, -50%);
-}
+      &::before, &::after {
+        display: none;
+      }
+    }
 
-.switch__input:checked + .switch__label .switch__indicator::before, .switch__input:checked + .switch__label .switch__indicator::after {
-  display: none;
-}
+    .switch__decoration {
+      top: 57%;
+      transform: translate(0%, -50%);
+      animation: cloud 8s linear infinite;
+      width: 11px;
+      height: 9px;
 
-.switch__input:checked + .switch__label .switch__decoration {
-  top: 57%;
-  transform: translate(0%, -50%);
-  animation: cloud 8s linear infinite;
-  width: 11px;
-  height: 9px;
-}
+      &::before {
+        width: 9px;
+        height: 6px;
+        top: auto;
+        bottom: 0;
+        left: -8px;
+        animation: none;
+      }
 
-.switch__input:checked + .switch__label .switch__decoration::before {
-  width: 9px;
-  height: 6px;
-  top: auto;
-  bottom: 0;
-  left: -8px;
-  animation: none;
-}
+      &::after {
+        width: 10px;
+        height: 11px;
+        top: auto;
+        bottom: 0;
+        left: 10px;
+        animation: none;
+      }
 
-.switch__input:checked + .switch__label .switch__decoration::after {
-  width: 10px;
-  height: 11px;
-  top: auto;
-  bottom: 0;
-  left: 10px;
-  animation: none;
-}
+      &::after {
+        border-bottom-right-radius: 9999px;
+      }
+    }
 
-.switch__input:checked + .switch__label .switch__decoration, .switch__input:checked + .switch__label .switch__decoration::before, .switch__input:checked + .switch__label .switch__decoration::after {
-  border-radius: 9999px 9999px 0 0;
-}
-
-.switch__input:checked + .switch__label .switch__decoration::after {
-  border-bottom-right-radius: 9999px;
+    .switch__decoration, .switch__decoration::before, .switch__decoration::after {
+      border-radius: 9999px 9999px 0 0;
+    }
+  }
 }
 
 @keyframes cloud {
@@ -217,14 +209,10 @@
   }
 }
 
-//
-//.darkMode {
-//  color: $letters_dark_mode
-//}
 
-@media (max-width: 750px) {
-  .header-container{
-    .sections-container{
+@media (max-width: 850px) {
+  .header-container {
+    .sections-container {
       display: none;
     }
   }
