--- a/src/scss/components/home.scss
+++ b/src/scss/components/home.scss
@@ -5,12 +5,11 @@
   color: $letters;
   display: flex;
   height: min-content;
-  width: 70%;
 
   .icons-container {
     display: flex;
     width: 55%;
-    justify-content: space-evenly;
+    justify-content: space-around;
     margin-top: 30px;
   }
 
@@ -117,32 +116,125 @@
   }
 }
 
-@media (max-width: 750px) {
+@media (max-width: 1500px) {
+  .info-section {
+    margin: 14% 12%;
+
+    .icons-container {
+      width: 68%;
+    }
+  }
+}
+
+@media (max-width: 1300px) {
+  .info-section {
+    margin: 16% 12%;
+
+    .right-section-container {
+      .photo {
+        margin-left: 13%;
+        width: 67%;
+      }
+    }
+
+    .icons-container {
+      width: 80%;
+    }
+  }
+}
+
+@media (max-width: 1150px) {
+  .info-section {
+    margin: 23% 12%;
+
+    .right-section-container {
+      .photo {
+        margin-left: 20%;
+        width: 75%;
+      }
+    }
+
+    .icons-container {
+      width: 88%;
+    }
+  }
+}
+
+@media (max-width: 1050px) {
+  .info-section {
+    margin: 27% 7%;
+
+    .right-section-container {
+      .photo {
+        margin-left: 10%;
+      }
+    }
+  }
+}
+
+@media (max-width: 950px) {
+  .info-section {
+    margin: 31% 5%;
+
+    .right-section-container {
+      .photo {
+        width: 80%;
+      }
+    }
+  }
+}
+
+@media (max-width: 850px) {
   .info-section {
     flex-direction: column;
-    margin: 10% 15% 50% 15%;
+    margin: 3% 3% 0% 3%;
     display: flex;
-    //justify-content: space-evenly;
     height: 70%;
-    justify-content: space-around;
+    justify-content: space-evenly;
+    align-items: center;
 
     .icons-container {
       width: 100%;
-      justify-content: center;
     }
 
     .personal-title {
-      font-size: 3.5rem;
+      font-size: 3.1rem;
     }
 
     .left-section-container {
-      width: 100%;
+      width: 68%;
     }
 
     .right-section-container {
       display: flex;
       justify-content: center;
       width: 100%;
+
+      .photo {
+        margin: 0;
+        width: 58%;
+      }
+    }
+
+    .blob {
+      width: 20vmax;
+      transform-origin: 50% 50%;
+    }
+  }
+}
+
+@media (max-width: 700px) {
+  .info-section {
+    margin: 3% 3% 0% 3%;
+    height: 85%;
+
+    .right-section-container {
+      width: 100%;
+
+      .photo {
+        margin: 0;
+        width: 58%;
+      }
     }
 
     .blob {
