--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -23,7 +23,10 @@
 //  color: $letters_dark_mode
 //}
 
-//@media (max-width: 1000px) {
+//@media (max-width: 849px) {
+//  .footer{
+//    display: none;
+//  }
 //}
 
 
