--- a/src/scss/components/contact.scss
+++ b/src/scss/components/contact.scss
@@ -5,11 +5,12 @@
   padding: 10rem 5rem 1rem 5rem;
   @extend %display-flex-center;
   flex-direction: column;
-  height: 75vh;
+  height: 50vh;
+  color: $letters;
 
   .contact-body {
     flex-direction: row;
-    width: 70%;
+    width: 80%;
     @extend %display-flex-center;
 
     .icons-container {
@@ -20,6 +21,7 @@
 
       .contact-icon {
         width: 100px;
+
         &:hover {
           cursor: pointer;
         }
@@ -30,6 +32,24 @@
       @extend %display-flex-center;
       flex-direction: column;
       width: 50%;
+      text-align: center;
+
+      h1 {
+        font-size: 60px;
+        color: $blue_principal;
+      }
+
+      p {
+        font-size: 31px;
+        margin-block-end: 0;
+        margin-block-start: 0;
+      }
+    }
+  }
+
+  .darkMode {
+    p {
+      color: white !important;
     }
   }
 }
@@ -47,27 +67,98 @@
   background-position: center center;
 }
 
-@media (max-width: 1500px) {
-
+.dark-mode-background {
+  background-blend-mode: darken
 }
 
-@media (max-width: 1300px) {
+@media (max-width: 1600px) {
+  .contact-section {
+    padding: 10rem 0 0 0;
 
+    .contact-body {
+      width: 87%;
+    }
+  }
 }
 
 @media (max-width: 1150px) {
+  .contact-section {
+    padding: 10rem 0 0 0;
 
+    .contact-body {
+      .description-container {
+        h1 {
+          font-size: 58px;
+        }
+
+        p {
+          font-size: 29px;
+        }
+      }
+    }
+  }
 }
 
 @media (max-width: 1050px) {
-
+  .contact-section {
+    .contact-body {
+      width: 93%;
+      .icons-container {
+        .contact-icon {
+          width: 95px;
+        }
+      }
+    }
+  }
 }
 
 @media (max-width: 950px) {
+  .contact-section {
+    .contact-body {
+      .description-container {
+        h1 {
+          font-size: 56px;
+        }
+
+        p {
+          font-size: 27px;
+        }
+      }
+      .icons-container {
+        .contact-icon {
+          width: 90px;
+        }
+      }
+    }
+  }
 }
 
 @media (max-width: 850px) {
+  .contact-section {
+    padding: 2rem 1rem 1rem 1rem;
+    flex-direction: column;
+    height: 85vh;
 
+    .contact-body {
+      flex-direction: column-reverse;
+      width: 90%;
+      height: 100%;
+
+      .icons-container {
+        width: 100%;
+        height: 50%;
+
+        .contact-icon {
+          width: 70px;
+        }
+      }
+
+      .description-container {
+        width: 100%;
+        height: 50%;
+      }
+    }
+  }
 }
 
 @media (max-width: 700px) {
