--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -51,8 +51,8 @@
 
 .header-container-mobile {
   position: fixed;
-  top: 0;
-  right: 0;
+  top: 10px;
+  right: 10px;
   color: $letters;
   display: flex;
   justify-content: space-between;
@@ -62,7 +62,7 @@
   .menu-mobile-icon {
     background-color: transparent;
     svg {
-      width: 34px;
+      width: 40px;
     }
 
     margin-bottom: 20px;
@@ -108,7 +108,7 @@
       }
 
       .menu-icon {
-        width: 34px;
+        width: 45px;
         stroke: black;
         fill: transparent;
         stroke-width: 1px;
@@ -126,6 +126,7 @@
 
     .active .menu-icon {
       animation: strok 1s reverse;
+      stroke: $blue_principal;
     }
   }
 
