--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -2,7 +2,7 @@
 @import '../abstracts/placeholders';
 
 .header {
-  position: fixed;
+  //position: fixed;
   width: 100%;
   height: 4rem;
   background: $light_background;
