--- a/src/scss/components/home.scss
+++ b/src/scss/components/home.scss
@@ -1,57 +1,31 @@
 @import '../abstracts/variables';
 
-.info-section {
-  margin-top: 4rem;
-  color: $letters;
+.home-container {
   display: flex;
-  height: min-content;
+  height: 80vh;
+  position: relative;
+  //padding-top: 4rem;
 
-  .icons-container {
-    display: flex;
-    width: 55%;
-    justify-content: space-around;
-    margin-top: 30px;
+  .home-intro {
+    font-family: "Barlow Condensed";
+    font-size: 72px;
+    font-weight: 300;
+    line-height: 80px;
+    letter-spacing: 0px;
+    z-index: 2;
+    margin-left: 10%;
   }
 
-  .left-section-container {
-    text-align: left;
-    width: 50%;
-    animation: 1.1s ease-out 0s 1 slideLeftToRight;
-
-    pre {
-      margin: 0;
-      font-family: inherit;
-    }
+  img {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    //display: block;
+    //width: auto;
+    //height: auto;
+    z-index: 1;
   }
 
-  .greeting {
-    font-size: 2rem;
-  }
-
-  .personal-title {
-    font-size: 5rem;
-  }
-
-  .right-section-container {
-    width: 50%;
-    animation: 1.1s ease-out 0s 1 slideRightToLeft;
-
-    .photo {
-      width: 58%;
-      border: 3px solid #1B75BC;
-      border-radius: 50%;
-      //background-image: url(./blob3.png);
-      &:hover {
-        transform: scale(1.02);
-      }
-    }
-  }
-
-  .name {
-    color: $blue_principal !important;
-    font-weight: bold;
-    font-size: 3rem;
-  }
 }
 
 .darkMode {
@@ -62,140 +36,51 @@
   }
 }
 
-html,body {
+html, body {
   overflow-x: hidden;
   overflow-y: hidden;
 }
 
-@keyframes slideRightToLeft {
-  0% {
-    transform: translateX(5%);
-    opacity: 0;
-  }
-  100% {
-    transform: translateX(0%);
-    opacity: 1;
-  }
-}
+//@keyframes slideRightToLeft {
+//  0% {
+//    transform: translateX(5%);
+//    opacity: 0;
+//  }
+//  100% {
+//    transform: translateX(0%);
+//    opacity: 1;
+//  }
+//}
 
-@keyframes slideLeftToRight {
-  0% {
-    transform: translateX(-5%);
-    opacity: 0;
-  }
-  100% {
-    transform: translateX(0%);
-    opacity: 1;
-  }
-}
+//@keyframes slideLeftToRight {
+//  0% {
+//    transform: translateX(-5%);
+//    opacity: 0;
+//  }
+//  100% {
+//    transform: translateX(0%);
+//    opacity: 1;
+//  }
+//}
 
 @media (max-width: 1500px) {
-  .info-section {
-
-    .icons-container {
-      width: 68%;
-    }
-  }
 }
 
 @media (max-width: 1300px) {
-  .info-section {
 
-    .right-section-container {
-      .photo {
-        margin-left: 13%;
-        width: 67%;
-      }
-    }
-
-    .icons-container {
-      width: 80%;
-    }
-  }
 }
 
 @media (max-width: 1150px) {
-  .info-section {
-
-    .right-section-container {
-      .photo {
-        margin-left: 20%;
-        width: 75%;
-      }
-    }
-
-    .icons-container {
-      width: 88%;
-    }
-  }
 }
 
 @media (max-width: 1050px) {
-  .info-section {
-
-    .right-section-container {
-      .photo {
-        margin-left: 10%;
-      }
-    }
-  }
 }
 
 @media (max-width: 950px) {
-  .info-section {
-
-    .right-section-container {
-      .photo {
-        width: 80%;
-      }
-    }
-  }
 }
 
 @media (max-width: 850px) {
-  .info-section {
-    flex-direction: column;
-    display: flex;
-    height: 70%;
-    justify-content: space-evenly;
-    align-items: center;
-
-    .icons-container {
-      width: 100%;
-    }
-
-    .personal-title {
-      font-size: 3.1rem;
-    }
-
-    .left-section-container {
-      width: 68%;
-    }
-
-    .right-section-container {
-      display: flex;
-      justify-content: center;
-      width: 100%;
-
-      .photo {
-        margin: 0;
-        width: 58%;
-      }
-    }
-  }
 }
 
 @media (max-width: 700px) {
-  .info-section {
-    height: 85%;
-
-    .right-section-container {
-      width: 100%;
-
-      .photo {
-        margin: 0;
-        width: 58%;
-      }
-    }
-  }
 }
