--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -12,6 +12,10 @@
   justify-content: center;
   padding: 5px 0;
   font-family: "Barlow Condensed";
+  box-shadow: 0 4px 12px 0 #00000040;
+  position: fixed;
+  top: 0;
+  z-index: 100;
 
   .header-body {
     justify-content: space-between;
