--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -11,6 +11,8 @@
 @import 'components/blog';
 @import 'components/footer';
 @import 'components/header';
-@import 'components/home';
+@import 'components/home/home';
+@import 'components/home/aboutme';
+@import 'components/home/services';
 @import 'components/icons';
 
