--- a/src/scss/components/blog.scss
+++ b/src/scss/components/blog.scss
@@ -23,8 +23,7 @@
       justify-content: space-around;
       cursor: pointer;
       background-color: white;
-      -webkit-box-shadow: 4px 4px 15px 0px rgba(0, 0, 0, 0.87);
-      box-shadow: 4px 4px 15px 0px rgba(0, 0, 0, 0.87);
+      box-shadow: 4px 4px 15px 0 rgba(0, 0, 0, 0.87);
 
       .title {
         font-family: sans-serif;
@@ -57,6 +56,10 @@
           width: 10px;
         }
       }
+    }
+
+    .article-item {
+      -webkit-box-shadow: 4px 4px 15px 0px rgba(0, 0, 0, 0.87);
     }
   }
 }
