--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,14 +3,18 @@
 @tailwind utilities;
 
 :root {
-    --bg-light: rgb(255, 255, 255);
+    --bg-principal-light: #E5E5F3;
+    --bg-secondary-light: rgba(59, 59, 122, 1);
+
     --bg-dark: rgb(18, 32, 61);
+    --bg-dark2: rgb(40, 52, 77);
 
     --text-primary: #686464;
     --text-primary-dark: #fff;
 
     --primary-color: #6357F6;
 
+    --nav-background: rgb(40, 52, 77, 0.9)
 }
 
 @layer utilities {
