--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,24 +3,43 @@
 @tailwind utilities;
 
 :root {
-    --bg-principal-light: #E5E5F3;
-    --bg-secondary-light: rgba(59, 59, 122, 1);
+  /*best*/
+  --bg-principal-light: #e7ebef;
+  --bg-secondary-light: rgba(116, 141, 146, 100%);
+  --bg-dark: rgba(33, 42, 49, 100%);
+  --bg-dark2: rgba(18, 78, 102, 60%);
 
-    --bg-dark: rgb(18, 32, 61);
-    --bg-dark2: rgb(40, 52, 77);
+  --primary-dark: rgba(18, 78, 102, 100%);
+  --primary-light: rgb(28, 122, 159);
+  /*--primary-dark: rgb(28, 122, 159);*/
+  /*--primary-light: rgba(18, 78, 102, 100%);*/
+  --secondary: rgb(18, 18, 19, 80%);
+  --icons-buttons: rgba(116, 141, 146, 100%);
+  --nav-background: rgb(40, 52, 77, 0.9);
 
-    --text-primary: #686464;
-    --text-primary-dark: #fff;
+  --gradient-light-1: #2e3944;
+  --gradient-light-2: rgba(18, 78, 102, 100%);
 
-    --primary-color: #6357F6;
-
-    --nav-background: rgb(40, 52, 77, 0.9)
+  --gradient-dark-1: rgba(116, 141, 146, 100%);
+  --gradient-dark-2: #d3d9d4;
 }
 
-@layer utilities {
-    .text-balance {
-        text-wrap: balance;
-    }
-}
+/*.test {*/
+/*  color: #212a31; !*rgba(33, 42, 49, 100%) *!*/
+/*  color: #2e3944;*/
+/*  color: #124e66; !*rgba(18, 78, 102, 100%); *!*/
+/*  color: #748d92; !* rgba(116, 141, 146, 0.1) *!*/
+/*  color: #d3d9d4;*/
+/*}*/
 
+@layer components {
+  .section {
+    @apply pt-20 w-full min-h-[calc(100vh)]
+    /*@apply pt-20 max-w-6xl min-h-fit*/
+  }
+
+  .gradient-title {
+    @apply bg-clip-text text-transparent bg-gradient-to-l from-[--gradient-light-1] to-[--gradient-light-2] dark:from-[--gradient-dark-1] dark:to-[--gradient-dark-2]
+  }
+}
 
