--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -3,16 +3,21 @@
 @tailwind utilities;
 
 :root {
-  /*best*/
-  --bg-principal-light: #e7ebef;
-  --bg-secondary-light: rgba(116, 141, 146, 100%);
+  --light-bg-principal: #FFFCFC;
+  --light-bg-secondary: #F0F1F2;
+
+  --light-primary: #0BBF7D;
+  --light-secondary: #124F66;
+
+
+
+
+
   --bg-dark: rgba(33, 42, 49, 100%);
   --bg-dark2: rgba(18, 78, 102, 60%);
 
   --primary-dark: rgba(18, 78, 102, 100%);
-  --primary-light: rgb(28, 122, 159);
-  /*--primary-dark: rgb(28, 122, 159);*/
-  /*--primary-light: rgba(18, 78, 102, 100%);*/
+  /*--primary-light: rgb(28, 122, 159);*/
   --secondary: rgb(18, 18, 19, 80%);
   --icons-buttons: rgba(116, 141, 146, 100%);
   --nav-background: rgb(40, 52, 77, 0.9);
@@ -34,7 +39,7 @@
 
 @layer components {
   .section {
-    @apply flex flex-col pt-20 w-full min-h-[calc(100vh)] [&>div]:max-w-6xl items-center
+    @apply flex flex-col w-full min-h-[calc(100vh)] [&>div]:max-w-6xl items-center
     /*@apply pt-20 max-w-6xl min-h-fit*/
   }
 
@@ -42,4 +47,3 @@
     @apply bg-clip-text text-transparent bg-gradient-to-l from-[--gradient-light-1] to-[--gradient-light-2] dark:from-[--gradient-dark-1] dark:to-[--gradient-dark-2]
   }
 }
-
