--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -38,3 +38,13 @@
     @apply bg-clip-text text-transparent bg-gradient-to-l from-[--gradient-light-1] to-[--gradient-light-2] dark:from-[--gradient-dark-1] dark:to-[--gradient-dark-2]
   }
 }
+
+.number-box{
+  background-origin: border-box;
+  background-clip: content-box, border-box;
+  border: double 0.2em transparent;
+  border-radius: 12px;
+  background-image: linear-gradient(var(--light-bg-secondary), var(--light-bg-secondary)),
+  linear-gradient(to right,  var(--light-primary) 0%, var(--light-bg-secondary) 60%);
+
+}
