--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -34,6 +34,10 @@
   .gradient-title {
     @apply bg-clip-text text-transparent bg-gradient-to-l from-[--gradient-light-1] to-[--gradient-light-2] dark:from-[--gradient-dark-1] dark:to-[--gradient-dark-2]
   }
+
+  .custom-shadow {
+    box-shadow: 0 0 34px 39px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06)
+  }
 }
 
 .number-box{
